new webinar added

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <!--section1-->
     <div class="section-1-webinar">
       <div class="header-1">
-        <h2 class="header-1-h2">5 Benefits of Using a CRM with Inbuilt Cloud Telephony</h2>
+        <h2 class="header-1-h2">Why Lead Response Time is Crucial for Businesses?</h2>
         <p class="header-1-para">
           Webinar By Mr.Vimal M, Co-Founder, Corefactors
         </p>
@@ -235,7 +235,7 @@
         <div class="form-section-1">
           <h3 class="form-section-1-h3">Register for the Webinar</h3>
           <p class="form-section-1-para">
-            Date: <strong>18th June 2020</strong>
+            Date: <strong>13th August 2020</strong>
           </p>
           <p class="form-section-1-para">Time: <strong>3:00 PM IST</strong></p>
           <p class="form-section-1-para">
@@ -307,26 +307,23 @@
         <div class="about-1">
           <h2 class="about-1-h2">About The Webinar</h2>
           <p class="about-1-para">
-            Get insights from Mr. Vimal M regarding the benefits of using a CRM with inbuilt cloud telephony.
+            Learn why lead response time matters for your business and how it affects the interactions between you and your customer further. 
           </p>
         </div>
         <div class="about-2">
           <h2 class="about-2-h2">You'll Learn</h2>
           <ul class="learnings">
             <li>
-              How to improve the tracking system with integrated CRM.
+              You have only 5 minutes to make or break the deal. The sooner the better. 
             </li>
             <li>
-              To measure the consistent flow of information with cross-use analytics.
+              The short life of online sales leads - Harvard Business Review.
             </li>
             <li>
-              How there’s a scope of personalization with integrated cloud telephony in the CRM.
+              Best time to follow up.
             </li>
             <li>
-              Effective lead management with detailed information about your prospects.
-            </li>
-            <li>
-              Increased team productivity with single-click functionality.
+              Tools for decreasing lead response time.
             </li>
           </ul>
         </div>
