--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </a>
 
     <!-- /logo -->
-    <hr class="webinar-hr-line-1" />
+    <!-- <hr class="webinar-hr-line-1" /> -->
 
     <!--section1-->
     <div class="section-1-webinar">
