new image added

--- a/index.html
+++ b/index.html
@@ -341,19 +341,22 @@
               </p>
             </div>
           </div>
-          <!-- <div class="guest-2">
+          <div class="guest-2">
+            <h2 class="ag-h2">Hear Out the Experience From</h2>
             <div class="guest">
-              <img src="images/sagar1.jpg" alt="guest-img" class="guest-img" />
-              <p class="guest-name"><strong>Mr. Sagar Maini</strong></p>
+              <img src="images/Surekha_Sunagad_image.jpg" alt="guest-img" class="guest-img" />
+              <p class="guest-name"><strong>Ms. Surekha Sunagad</strong><br>
+                Marcomm Catalyst, Golden Square
+              </p>
             </div>
             <div class="guest-content">
-              <p class="guest-para">
+              <!-- <p class="guest-para">
                 A <i><strong>Senior Sales Consultant</strong></i> at
                 Corefactors, Sagar works closely with the product development
                 team for integrated sales and marketing.
-              </p>
+              </p> -->
             </div>
-          </div> -->
+          </div>
         </div>
         <!--about section ends here-->
       </div>
