surekha desc added

--- a/index.html
+++ b/index.html
@@ -346,15 +346,14 @@
             <div class="guest">
               <img src="images/Surekha_Sunagad_image.jpg" alt="guest-img" class="guest-img" />
               <p class="guest-name"><strong>Ms. Surekha Sunagad</strong><br>
-                Marcomm Catalyst, Golden Square
+                Marketing Communication Catalyst, Golden Square
               </p>
             </div>
             <div class="guest-content">
-              <!-- <p class="guest-para">
-                A <i><strong>Senior Sales Consultant</strong></i> at
-                Corefactors, Sagar works closely with the product development
-                team for integrated sales and marketing.
-              </p> -->
+              <p class="guest-para">
+                Surekha has a vast experience in CRM, technical recruiting, and Management information systems. 
+                She works as a <i><strong>Marketing Communication Catalyst</strong></i> at Golden Square.
+              </p>
             </div>
           </div>
         </div>
