--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             </div>
           </div>
           <div class="guest-2">
-            <h2 class="ag-h2">Hear Out the Experience From</h2>
+            <h2 class="ag-h2" style="margin-top:25px;">Hear Out the Experience From</h2>
             <div class="guest">
               <img src="images/Surekha_Sunagad_image.jpg" alt="guest-img" class="guest-img" />
               <p class="guest-name"><strong>Ms. Surekha Sunagad</strong><br>
