form code added

--- a/index.html
+++ b/index.html
@@ -274,15 +274,15 @@
               required
             />
            <!-- List token -->
-            <!-- Get the token at: https://app.getresponse.com/campaign_list.html -->
-            <input type="hidden" name="campaign_token" value="yDiAb" />
-            <!-- Thank you page (optional) -->
-            <input type="hidden" name="thankyou_url" value="https://www.corefactors.in/webinar-crm-inbuilt-cloud-telephony/thank-you"/>
-            <!-- Add subscriber to the follow-up sequence with a specified day (optional) -->
-            <input type="hidden" name="start_day" value="0" />
-            <!-- Forward form data to your page (optional) -->
-            <input type="hidden" name="forward_data" value="post" />
-            <!-- Subscriber button -->
+          <!-- Get the token at: https://app.getresponse.com/campaign_list.html -->
+          <input type="hidden" name="campaign_token" value="WjaTF" />
+          <!-- Thank you page (optional) -->
+          <input type="hidden" name="thankyou_url" value="https://www.corefactors.in/webinar-lead-response-time/thank-you"/>
+          <!-- Add subscriber to the follow-up sequence with a specified day (optional) -->
+          <input type="hidden" name="start_day" value="0" />
+          <!-- Forward form data to your page (optional) -->
+          <input type="hidden" name="forward_data" value="" />
+          <!-- Subscriber button -->
             <input
               type="submit"
               value="Save My Seat"
